--- a/index.html
+++ b/index.html
@@ -6,7 +6,30 @@
     <link rel="stylesheet" href="ex_html-css-js.css">
 </head>
 <body>
-   ..........
+    <h1>¡¡Pide aquí tu rico pescaíto!!</h1>
+    <img src = "pescado_frito.jpg">
+    <form title="Freídurial online">
+        <h2>Datos del cliente</h2>
+        <label>Nombre</label>
+        <input type="text"> 
+        <label>Apellidos</label>
+        <input type="text"> 
+        <label>Email</label>
+        <input type="text"> 
+        <label >Direccion</label>
+        <input type="text" minlength="18"> 
+        <label>Teléfono</label>
+        <input type="tel" minlength="9"> 
+        <label>Hora aproximada de entrega</label>
+        <input type="time">
+        <h2>Pedido de pescado</h2>
+        <h2>Método de pago</h2>
+        <h2>Instrucciones adicionales</h2>
+        <input type="instrucciones_adicionales" maxlength="150">
+        <span id="numero_caracteres">0</span>/150 caracteres
+    </form>
+    
+    <footer>Creado por Nicolás Mercado García</footer>
 
     <script src="ex_html-css-js.js"></script>
 
